@@ -3356,12 +3356,6 @@ public:
 #undef __GMP_DEFINE_BINARY_TYPE_FUNCTION
 
 #undef __GMPZ_DEFINE_COMPOUND_OPERATOR
-#undef __GMPZN_DEFINE_COMPOUND_OPERATOR
-#undef __GMPZNN_DEFINE_COMPOUND_OPERATOR
-#undef __GMPZNS_DEFINE_COMPOUND_OPERATOR
-#undef __GMPZNU_DEFINE_COMPOUND_OPERATOR
-#undef __GMPZND_DEFINE_COMPOUND_OPERATOR
-#undef __GMPZNLD_DEFINE_COMPOUND_OPERATOR
 
 #undef __GMPP_DEFINE_COMPOUND_OPERATOR
 #undef __GMPNN_DEFINE_COMPOUND_OPERATOR
