@@ -1,3 +1,7 @@
+2011-03-12  Marc Glisse  <marc.glisse@inria.fr>
+
+	* gmpxx.h: Remove leftover #undefs.
+
 2011-03-11 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* gmp-impl.h: Declare many mpn_{sub,add}lsh*_n_ip[12] functions/macros.
